/ap saveinv *, needs tested